# axum-demo

./: Cargo.toml
src/: main.rs
src/api/: mod.rs
src/schemas/: mod.rs
src/utils/: mod.rs
