[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.19"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bb8 = "0.8"
diesel = "2"
diesel-async = { version = "0.3", features = ["mysql", "bb8"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
